Upgrade archives in ICRC golden state tests

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -23,8 +23,10 @@ canisters(
         "genesis-token": "genesis-token-canister.wasm.gz",
         "cycles-minting": "cycles-minting-canister.wasm.gz",
         "sns-wasm": "sns-wasm-canister.wasm.gz",
+        "ck_btc_archive": "ic-icrc1-archive.wasm.gz",
         "ck_btc_ledger": "ic-icrc1-ledger.wasm.gz",
         "ck_btc_index": "ic-icrc1-index-ng.wasm.gz",
+        "ck_eth_archive": "ic-icrc1-archive-u256.wasm.gz",
         "ck_eth_ledger": "ic-icrc1-ledger-u256.wasm.gz",
         "ck_eth_index": "ic-icrc1-index-ng-u256.wasm.gz",
         "sns_root": "sns-root-canister.wasm.gz",
@@ -46,8 +48,10 @@ canisters(
         "genesis-token": "mainnet_nns_genesis-token-canister",
         "cycles-minting": "mainnet_nns_cycles-minting-canister",
         "sns-wasm": "mainnet_nns_sns-wasm-canister",
+        "ck_btc_archive": "mainnet_ckbtc_ic-icrc1-archive",
         "ck_btc_ledger": "mainnet_ckbtc_ic-icrc1-ledger",
         "ck_btc_index": "mainnet_ckbtc-index-ng",
+        "ck_eth_archive": "mainnet_cketh_ic-icrc1-archive-u256",
         "ck_eth_ledger": "mainnet_cketh_ic-icrc1-ledger-u256",
         "ck_eth_index": "mainnet_cketh-index-ng",
         "sns_root": "mainnet_sns-root-canister",
