--- a/rs/p2p/artifact_downloader/BUILD.bazel
+++ b/rs/p2p/artifact_downloader/BUILD.bazel
@@ -7,6 +7,7 @@ package(default_visibility = [
 
 DEPENDENCIES = [
     "//rs/interfaces",
+    "//rs/limits",
     "//rs/monitoring/logger",
     "//rs/monitoring/metrics",
     "//rs/phantom_newtype",
