--- a/rs/p2p/artifact_downloader/Cargo.toml
+++ b/rs/p2p/artifact_downloader/Cargo.toml
@@ -12,6 +12,7 @@ bytes = { workspace = true }
 ic-base-types = { path = "../../types/base_types" }
 ic-consensus-manager = { path = "../consensus_manager" }
 ic-interfaces = { path = "../../interfaces" }
+ic-limits = { path = "../../limits" }
 ic-logger = { path = "../../monitoring/logger" }
 ic-metrics = { path = "../../monitoring/metrics" }
 ic-protobuf = { path = "../../protobuf" }
