--- a/Cargo.toml
+++ b/Cargo.toml
@@ -471,6 +471,7 @@ anyhow = "^1"
 arbitrary = { version = "1.3.2", features = ["derive"] }
 arrayvec = "0.7.4"
 askama = { version = "0.12.1", features = ["serde-json"] }
+assert_cmd = "2.0.16"
 assert_matches = "1.5.0"
 async-recursion = "1.0.5"
 async-stream = "0.3.6"
@@ -597,6 +598,7 @@ p256 = { version = "0.13.2", default-features = false, features = [
 ] }
 pairing = "0.23"
 parking_lot = "0.12.3"
+paste = "1.0.15"
 ping = "0.5.0"
 pkcs8 = "0.10.2"
 pprof = { version = "0.13.0", default-features = false, features = [
@@ -604,6 +606,7 @@ pprof = { version = "0.13.0", default-features = false, features = [
     "flamegraph",
     "prost-codec",
 ] }
+predicates = "3.1.2"
 pretty_assertions = "1.4.0"
 proc-macro2 = "1.0.88"
 prometheus = { version = "0.13.4", features = ["process"] }
@@ -637,6 +640,7 @@ reqwest = { version = "0.12.7", default-features = false, features = [
     "stream",
 ] }
 rolling-file = "0.2.0"
+rsa = { version = "0.9.6", features = [ "sha2" ] }
 rstest = "0.19.0"
 rustc-demangle = { version = "0.1.16" }
 rustls = { version = "0.23.14", default-features = false, features = [
@@ -666,6 +670,7 @@ socket2 = { version = "0.5.7", features = ["all"] }
 static_assertions = "1.1.0"
 strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
+subtle = "2.6.1"
 syn = { version = "1.0.109", features = ["fold", "full"] }
 sync_wrapper = "1.0.1"
 tar = "0.4.39"
