--- a/packages/ic-signature-verification/Cargo.toml
+++ b/packages/ic-signature-verification/Cargo.toml
@@ -19,7 +19,7 @@ ic-verify-bls-signature = { version = "0.6", default-features = false, features 
     "alloc",
 ] }
 ic_principal = "0.1"
-serde = { version = "1.0", features = ["derive"] }
+serde = { workspace = true }
 serde_bytes = "0.11"
 serde_cbor = "0.11"
 sha2 = "0.10"
