--- a/rs/crypto/Cargo.toml
+++ b/rs/crypto/Cargo.toml
@@ -96,7 +96,7 @@ proptest-derive = { workspace = true }
 prost = { workspace = true }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
-rsa = "0.9.2"
+rsa = { workspace = true }
 sha2 = { workspace = true }
 simple_asn1 = { workspace = true }
 
