--- a/rs/crypto/internal/crypto_lib/basic_sig/rsa_pkcs1/Cargo.toml
+++ b/rs/crypto/internal/crypto_lib/basic_sig/rsa_pkcs1/Cargo.toml
@@ -13,7 +13,7 @@ ic-types = { path = "../../../../../types/types" }
 num-bigint = { workspace = true }
 num-traits = { workspace = true }
 pkcs8 = { workspace = true }
-rsa = { version = "0.9.2", features = [ "sha2" ] }
+rsa = { workspace = true }
 serde = { workspace = true }
 sha2 = { workspace = true }
 simple_asn1 = { workspace = true }
