--- a/rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/Cargo.toml
+++ b/rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/Cargo.toml
@@ -23,14 +23,14 @@ ic-types = { path = "../../../../../types/types" }
 k256 = { workspace = true }
 lazy_static = { workspace = true }
 p256 = { workspace = true }
-paste = "1.0.0"
+paste = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
 serde_cbor = { workspace = true }
 strum = { workspace = true }
 strum_macros = { workspace = true }
-subtle = "2.4"
+subtle = { workspace = true }
 zeroize = { workspace = true }
 
 [dev-dependencies]
