--- a/rs/ethereum/ledger-suite-orchestrator/Cargo.toml
+++ b/rs/ethereum/ledger-suite-orchestrator/Cargo.toml
@@ -43,7 +43,7 @@ ic-ledger-suite-orchestrator-test-utils = { path = "test_utils" }
 ic-state-machine-tests = { path = "../../state_machine_tests" }
 maplit = "1"
 mockall = { workspace = true }
-paste = "1.0.12"
+paste = { workspace = true }
 proptest = { workspace = true }
 scraper = "0.17.1"
 tokio = { workspace = true }
