--- a/rs/tests/Cargo.toml
+++ b/rs/tests/Cargo.toml
@@ -144,7 +144,7 @@ regex = { workspace = true }
 registry-canister = { path = "../registry/canister" }
 reqwest = { workspace = true }
 rosetta-core = { path = "../rosetta-api/common/rosetta_core" }
-rsa = { version = "0.9.2", features = ["sha2"] }
+rsa = { workspace = true }
 rust_decimal = "1.25"
 serde = { workspace = true }
 serde_bytes = { workspace = true }
