--- a/rs/tests/driver/Cargo.toml
+++ b/rs/tests/driver/Cargo.toml
@@ -123,7 +123,7 @@ registry-canister = { path = "../../registry/canister" }
 reqwest = { workspace = true }
 ring = { version = "0.17.7", features = ["std"] }
 rosetta-core = { path = "../../rosetta-api/common/rosetta_core" }
-rsa = { version = "0.9.2", features = ["sha2"] }
+rsa = { workspace = true }
 rust_decimal = "1.25"
 serde = { workspace = true }
 serde_bytes = { workspace = true }
