--- a/rs/utils/validate_eq_derive/Cargo.toml
+++ b/rs/utils/validate_eq_derive/Cargo.toml
@@ -8,8 +8,7 @@ path = "src/lib.rs"
 proc-macro = true
 
 [dependencies]
-darling = "0.20.10"
-proc-macro2 = "1.0.86"
-quote = "1.0.36"
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
 syn = { workspace = true }
 
