--- a/Cargo.toml
+++ b/Cargo.toml
@@ -683,6 +683,7 @@ tokio-metrics = "0.3.1"
 tokio-rustls = { version = "0.26.0", default-features = false, features = [
     "ring",
 ] }
+tokio-test = "0.4.4"
 tokio-util = { version = "0.7.12", features = ["full"] }
 tonic = "0.12.3"
 tonic-build = "0.12.3"
