--- a/rs/ledger_suite/icp/BUILD.bazel
+++ b/rs/ledger_suite/icp/BUILD.bazel
@@ -45,6 +45,7 @@ rust_library(
         "@crate_index//:crc32fast",
         "@crate_index//:hex",
         "@crate_index//:ic-cdk",
+        "@crate_index//:ic-stable-structures",
         "@crate_index//:num-traits",
         "@crate_index//:prost",
         "@crate_index//:serde",
