--- a/rs/ledger_suite/common/ledger_core/BUILD.bazel
+++ b/rs/ledger_suite/common/ledger_core/BUILD.bazel
@@ -22,6 +22,7 @@ rust_test(
     name = "ledger_core_test",
     crate = ":ledger_core",
     deps = [
+        "@crate_index//:proptest",
     ],
 )
 
