--- a/rs/ic_os/config/Cargo.toml
+++ b/rs/ic_os/config/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = { workspace = true }
 serde = { workspace = true }
 serde_with = "1.6.2"
 regex = { workspace = true }
+mac_address = { path = "../network/mac_address" }
 
 [dev-dependencies]
 once_cell = "1.8"
