--- a/Cargo.toml
+++ b/Cargo.toml
@@ -131,6 +131,7 @@ members = [
     "rs/ic_os/build_tools/inject_files",
     "rs/ic_os/dev_test_tools/launch-single-vm",
     "rs/ic_os/network",
+    "rs/ic_os/network/mac_address",
     "rs/ic_os/nft_exporter",
     "rs/ic_os/nss_icos",
     "rs/ic_os/dev_test_tools/setupos-inject-configuration",
