--- a/rs/ic_os/os_tools/setupos_tool/Cargo.toml
+++ b/rs/ic_os/os_tools/setupos_tool/Cargo.toml
@@ -12,4 +12,5 @@ anyhow = { workspace = true }
 clap = { workspace = true }
 config = { path = "../../config" }
 network = { path = "../../network" }
+mac_address = { path = "../../network/mac_address" }
 utils = { path = "../../utils" }
