--- a/rs/ic_os/network/Cargo.toml
+++ b/rs/ic_os/network/Cargo.toml
@@ -6,12 +6,10 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 config = { path = "../config" }
-hex = { version = "^0.4.3" }
+mac_address = { path = "./mac_address" }
 ping = { version = "^0.5.0" }
 rayon = { workspace = true }
-regex = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { version = "^1.6.2" }
-sha2 = { workspace = true }
 utils = { path = "../utils" }
