--- a/ic-os/components/early-boot/setup-hostname/setup-hostname.service
+++ b/ic-os/components/early-boot/setup-hostname/setup-hostname.service
@@ -11,4 +11,4 @@ WantedBy=multi-user.target
 [Service]
 Type=oneshot
 RemainAfterExit=true
-ExecStart=/opt/ic/bin/setup-hostname.sh
+ExecStart=/opt/ic/bin/setup-hostname.sh --type=guest
