--- a/rs/tests/consensus/orchestrator/Cargo.toml
+++ b/rs/tests/consensus/orchestrator/Cargo.toml
@@ -60,3 +60,7 @@ path = "unstuck_subnet_test.rs"
 [[bin]]
 name = "ic-systest-node-assign-test"
 path = "node_assign_test.rs"
+
+[[bin]]
+name = "ic-systest-node-redeploy-test"
+path = "node_redeploy_test.rs"
