--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -60,28 +60,28 @@ jobs:
         run: |
           set -xeuo pipefail
 
-          # Determine which tests to skip:
-          EXCLUDED_TEST_TAGS=(system_test_hourly system_test_nightly system_test_nightly_nns system_test_staging system_test_hotfix system_test_benchmark fuzz_test fi_tests_nightly nns_tests_nightly)
-          if [[ "${{ github.event_name }}" == 'pull_request' || "${{ github.event_name }}" == 'merge_group' ]]; then
-            TEST_TAG_FILTERS+=(long_test)
-          fi
-          # We save the excluded test tags in an environment variable such that ci/bazel-scripts/diff.sh can read them:
-          echo "EXCLUDED_TEST_TAGS=${EXCLUDED_TEST_TAGS[@]}" >> $GITHUB_ENV
+          # Determine which tests to skip and append 'long_test' for pull requests or merge groups
+          EXCLUDED_TEST_TAGS=(post_master system_test_hourly system_test_nightly system_test_nightly_nns system_test_staging system_test_hotfix system_test_benchmark fuzz_test fi_tests_nightly nns_tests_nightly)
+          [[ "${{ github.event_name }}" =~ ^(pull_request|merge_group)$ ]] && EXCLUDED_TEST_TAGS+=(long_test)
 
-          # Prepend the excluded test tags with a '-' such that they can be passed to --test_tag_filters= below:
-          TEST_TAG_FILTERS=()
-          for tag in "${EXCLUDED_TEST_TAGS[@]}"; do
-            TEST_TAG_FILTERS+=("-$tag")
-          done
-          # Test tag filters need to be separated by commas:
-          IFS=','
+          # Export excluded tags as environment variable for ci/bazel-scripts/diff.sh
+          echo "EXCLUDED_TEST_TAGS=${EXCLUDED_TEST_TAGS[*]}" >> $GITHUB_ENV
+
+          # Prepend tags with '-' and join them with commas for Bazel
+          TEST_TAG_FILTERS=$(IFS=,; echo "${EXCLUDED_TEST_TAGS[*]/#/-}")
+
+          # Determine BAZEL_EXTRA_ARGS based on event type or branch name
+          BAZEL_EXTRA_ARGS="--test_tag_filters=$TEST_TAG_FILTERS"
           if [[ "${{ github.event_name }}" == 'merge_group' ]]; then
-            echo "BAZEL_EXTRA_ARGS=--test_tag_filters=${TEST_TAG_FILTERS[*]} --test_timeout_filters=short,moderate --flaky_test_attempts=3" >> $GITHUB_ENV
+              BAZEL_EXTRA_ARGS+=" --test_timeout_filters=short,moderate --flaky_test_attempts=3"
           elif [[ $BRANCH_NAME =~ ^hotfix-.* ]]; then
-            echo "BAZEL_EXTRA_ARGS=--test_tag_filters=${TEST_TAG_FILTERS[*]} --test_timeout_filters=short,moderate" >> $GITHUB_ENV
+              BAZEL_EXTRA_ARGS+=" --test_timeout_filters=short,moderate"
           else
-            echo "BAZEL_EXTRA_ARGS=--test_tag_filters=${TEST_TAG_FILTERS[*]} --keep_going" >> $GITHUB_ENV
+              BAZEL_EXTRA_ARGS+=" --keep_going"
           fi
+
+          # Export BAZEL_EXTRA_ARGS to environment
+          echo "BAZEL_EXTRA_ARGS=$BAZEL_EXTRA_ARGS" >> $GITHUB_ENV
       - name: Run Bazel Test All
         id: bazel-test-all
         uses: ./.github/actions/bazel-test-all/
