fix(IDX): specify asset canister path via env
This updates some boundary node tests to use an asset canister provided
through environment variable. This avoids the tests relying on bazel
implementation details (`external/`).

--- a/rs/tests/boundary_nodes/BUILD.bazel
+++ b/rs/tests/boundary_nodes/BUILD.bazel
@@ -17,6 +17,7 @@ system_test_nns(
     env = {
         "KV_STORE_WASM_PATH": "$(rootpath //rs/tests/test_canisters/kv_store)",
         "HTTP_COUNTER_WASM_PATH": "$(rootpath //rs/tests/test_canisters/http_counter)",
+        "ASSET_CANISTER_WASM_PATH": "$(rootpath @asset_canister//file)",
     },
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
@@ -40,6 +41,7 @@ system_test_nns(
     env = {
         "KV_STORE_WASM_PATH": "$(rootpath //rs/tests/test_canisters/kv_store)",
         "HTTP_COUNTER_WASM_PATH": "$(rootpath //rs/tests/test_canisters/http_counter)",
+        "ASSET_CANISTER_WASM_PATH": "$(rootpath @asset_canister//file)",
     },
     flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
