--- a/rs/tests/testing_verification/BUILD.bazel
+++ b/rs/tests/testing_verification/BUILD.bazel
@@ -31,8 +31,12 @@ rust_binary(
 
 system_test_nns(
     name = "spec_compliance_application_subnet_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on long_test.
     flaky = True,
-    tags = ["cpu:4"],
+    tags = [
+        "cpu:4",
+        "long_test",  # since it takes longer than 5 minutes.
+    ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
     runtime_deps = BOUNDARY_NODE_GUESTOS_RUNTIME_DEPS + GUESTOS_RUNTIME_DEPS + UNIVERSAL_VM_RUNTIME_DEPS + CANISTER_HTTP_RUNTIME_DEPS + IC_HS_RUNTIME_DEPS + [
         "//ic-os/components:networking/dev-certs/canister_http_test_ca.cert",
@@ -48,8 +52,12 @@ system_test_nns(
 
 system_test_nns(
     name = "spec_compliance_system_subnet_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on long_test.
     flaky = True,
-    tags = ["cpu:4"],
+    tags = [
+        "cpu:4",
+        "long_test",
+    ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
     runtime_deps = BOUNDARY_NODE_GUESTOS_RUNTIME_DEPS + GUESTOS_RUNTIME_DEPS + UNIVERSAL_VM_RUNTIME_DEPS + CANISTER_HTTP_RUNTIME_DEPS + IC_HS_RUNTIME_DEPS + [
         "//ic-os/components:networking/dev-certs/canister_http_test_ca.cert",
@@ -65,8 +73,12 @@ system_test_nns(
 
 system_test_nns(
     name = "spec_compliance_group_01_application_subnet_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on long_test.
     flaky = True,
-    tags = ["cpu:4"],
+    tags = [
+        "cpu:4",
+        "long_test",  # since it takes longer than 5 minutes.
+    ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
     runtime_deps = BOUNDARY_NODE_GUESTOS_RUNTIME_DEPS + GUESTOS_RUNTIME_DEPS + UNIVERSAL_VM_RUNTIME_DEPS + CANISTER_HTTP_RUNTIME_DEPS + IC_HS_RUNTIME_DEPS + [
         "//ic-os/components:networking/dev-certs/canister_http_test_ca.cert",
@@ -82,8 +94,12 @@ system_test_nns(
 
 system_test_nns(
     name = "spec_compliance_group_01_system_subnet_test",
+    extra_head_nns_tags = [],  # don't run the head_nns variant on nightly since it aleady runs on long_test.
     flaky = True,
-    tags = ["cpu:4"],
+    tags = [
+        "cpu:4",
+        "long_test",
+    ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
     runtime_deps = BOUNDARY_NODE_GUESTOS_RUNTIME_DEPS + GUESTOS_RUNTIME_DEPS + UNIVERSAL_VM_RUNTIME_DEPS + CANISTER_HTTP_RUNTIME_DEPS + IC_HS_RUNTIME_DEPS + [
         "//ic-os/components:networking/dev-certs/canister_http_test_ca.cert",
