--- a/Cargo.toml
+++ b/Cargo.toml
@@ -351,6 +351,7 @@ members = [
     "rs/test_utilities/tmpdir",
     "rs/tests",
     "rs/tests/boundary_nodes",
+    "rs/tests/boundary_nodes/custom_domains",
     "rs/tests/boundary_nodes/integration_test_common",
     "rs/tests/boundary_nodes/performance_test_common",
     "rs/tests/boundary_nodes/utils",
