chore: Migrate all canisters to clap 4 (#2013)
Migrated as per instructions
[here](https://github.com/clap-rs/clap/blob/master/CHANGELOG.md#400---2022-09-28)

--- a/rs/pocket_ic_server/Cargo.toml
+++ b/rs/pocket_ic_server/Cargo.toml
@@ -15,7 +15,7 @@ base64 = { workspace = true }
 bitcoin = { version = "0.28.1", features = ["default", "use-serde", "rand"] }
 bytes = { workspace = true }
 candid = { workspace = true }
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true }
 ctrlc = { version = "3.4.5", features = ["termination"] }
 flate2 = { workspace = true }
 form_urlencoded = "1"
