--- a/rs/state_tool/Cargo.toml
+++ b/rs/state_tool/Cargo.toml
@@ -13,7 +13,7 @@ name = "state-tool"
 path = "src/main.rs"
 
 [dependencies]
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true }
 hex = { workspace = true }
 ic-config = { path = "../config" }
 ic-logger = { path = "../monitoring/logger" }
