--- a/rs/tests/networking/Cargo.toml
+++ b/rs/tests/networking/Cargo.toml
@@ -13,12 +13,16 @@ canister-test = { path = "../../rust_canisters/canister_test" }
 canister_http = { path = "./canister_http" }
 cloner-canister-types = { path = "./canisters" }
 dfn_candid = { path = "../../rust_canisters/dfn_candid" }
+ic-agent = { workspace = true }
 ic-base-types = { path = "../../types/base_types" }
 ic-cdk = { workspace = true }
 ic-limits = { path = "../../limits" }
 ic-management-canister-types = { path = "../../types/management_canister_types" }
 ic-networking-system-test-utils = { path = "./utils" } 
+ic-nns-governance-api = { path = "../../nns/governance/api" }
 ic-prep = { path = "../../prep" }
+ic-protobuf = { path = "../../protobuf" }
+ic-registry-keys = { path = "../../registry/keys" }
 ic-registry-subnet-features = { path = "../../registry/subnet_features" }
 ic-registry-subnet-type = { path = "../../registry/subnet_type" }
 ic-system-test-driver = { path = "../driver" }
@@ -27,9 +31,13 @@ ic-test-utilities-types = { path = "../../test_utilities/types" }
 ic-types = { path = "../../types/types" }
 ic-utils = { workspace = true }
 proxy_canister = { path = "../../rust_canisters/proxy_canister" }
+rand = { workspace = true }
+rand_chacha = { workspace = true }
+registry-canister = {path = "../../registry/canister"}
 reqwest = { workspace = true }
 slog = { workspace = true }
 tokio = { workspace = true }
+url = { workspace = true }
 
 [[bin]]
 name = "ic-systest-canister-http-correctness"
@@ -69,7 +77,7 @@ path = "network_reliability_test.rs"
 
 [[bin]]
 name = "ic-systest-p2p-performance"
-path = "p2p_performance.rs"
+path = "p2p_performance_test.rs"
 
 [[bin]]
 name = "ic-systest-query-workload-long-test"
