--- a/rs/tests/boundary_nodes/Cargo.toml
+++ b/rs/tests/boundary_nodes/Cargo.toml
@@ -18,7 +18,7 @@ ic-boundary-nodes-integration-test-common = { path = "integration_test_common" }
 ic-boundary-nodes-performance-test-common = { path = "performance_test_common" }
 ic-canister-client = { path = "../../canister_client" }
 ic-nervous-system-common-test-keys = { path = "../../nervous_system/common/test_keys" }
-ic-networking-system-test-utils = { path = "../networking/utils" } 
+ic-networking-subnet-update-workload = { path = "../networking/subnet_update_workload" } 
 ic-nns-common = { path = "../../nns/common" }
 ic-nns-constants = { path = "../../nns/constants" }
 ic-nns-governance-api = { path = "../../nns/governance/api" }
