feat(ledger-core): FI-1437: Implement stable structures storable interface for Allowance (#2000)
Co-authored-by: IDX GitHub Automation <infra+github-automation@dfinity.org>
Co-authored-by: Mathias Björkqvist <mathias.bjorkqvist@dfinity.org>

--- a/rs/ledger_suite/common/ledger_core/BUILD.bazel
+++ b/rs/ledger_suite/common/ledger_core/BUILD.bazel
@@ -11,6 +11,7 @@ rust_library(
         # Keep sorted.
         "//packages/ic-ledger-hash-of:ic_ledger_hash_of",
         "@crate_index//:candid",
+        "@crate_index//:ic-stable-structures",
         "@crate_index//:num-traits",
         "@crate_index//:serde",
         "@crate_index//:serde_bytes",
@@ -21,6 +22,7 @@ rust_test(
     name = "ledger_core_test",
     crate = ":ledger_core",
     deps = [
+        "@crate_index//:proptest",
     ],
 )
 
