--- a/rs/ledger_suite/common/ledger_core/Cargo.toml
+++ b/rs/ledger_suite/common/ledger_core/Cargo.toml
@@ -9,8 +9,10 @@ documentation.workspace = true
 [dependencies]
 candid = { workspace = true }
 ic-ledger-hash-of = { path = "../../../../packages/ic-ledger-hash-of" }
+ic-stable-structures = { workspace = true }
 num-traits = { workspace = true }
 serde = { workspace = true }
 serde_bytes = { workspace = true }
 
 [dev-dependencies]
+proptest = { workspace = true }
