--- a/rs/bitcoin/adapter/test_utils/BUILD.bazel
+++ b/rs/bitcoin/adapter/test_utils/BUILD.bazel
@@ -17,7 +17,7 @@ DEV_DEPENDENCIES = []
 MACRO_DEPENDENCIES = []
 
 rust_library(
-    name = "test_utils",
+    name = "ic_btc_adapter_test_utils",
     testonly = True,
     srcs = glob(["src/**/*.rs"]),
     crate_name = "ic_btc_adapter_test_utils",
