//rs/canonical_state/tree_hash/test_utils:test_utils -> //rs/canonical_state/tree_hash/test_utils:ic_canonical_state_tree_hash_test_utils

--- a/rs/canonical_state/BUILD.bazel
+++ b/rs/canonical_state/BUILD.bazel
@@ -29,7 +29,7 @@ MACRO_DEPENDENCIES = [
 
 DEV_DEPENDENCIES = [
     # Keep sorted.
-    "//rs/canonical_state/tree_hash/test_utils",
+    "//rs/canonical_state/tree_hash/test_utils:ic_canonical_state_tree_hash_test_utils",
     "//rs/crypto/sha2",
     "//rs/registry/subnet_features",
     "//rs/sys",
