--- a/rs/state_manager/BUILD.bazel
+++ b/rs/state_manager/BUILD.bazel
@@ -142,7 +142,7 @@ rust_bench(
         "//rs/canonical_state",
         "//rs/canonical_state/certification_version",
         "//rs/canonical_state/tree_hash",
-        "//rs/canonical_state/tree_hash/test_utils",
+        "//rs/canonical_state/tree_hash/test_utils:ic_canonical_state_tree_hash_test_utils",
         "//rs/criterion_time",
         "//rs/crypto/tree_hash",
         "//rs/registry/subnet_type",
