--- a/rs/p2p/peer_manager/BUILD.bazel
+++ b/rs/p2p/peer_manager/BUILD.bazel
@@ -21,7 +21,7 @@ DEPENDENCIES = [
 
 DEV_DEPENDENCIES = [
     # Keep sorted.
-    "//rs/p2p/test_utils",
+    "//rs/p2p/test_utils:ic_p2p_test_utils",
     "//rs/test_utilities/logger",
     "//rs/types/types_test_utils",
 ]
