--- a/rs/p2p/state_sync_manager/BUILD.bazel
+++ b/rs/p2p/state_sync_manager/BUILD.bazel
@@ -32,7 +32,7 @@ DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/p2p/memory_transport",
-    "//rs/p2p/test_utils",
+    "//rs/p2p/test_utils:ic_p2p_test_utils",
     "//rs/state_manager",
     "//rs/test_utilities/logger",
     "//rs/types/types",
