--- a/rs/sns/governance/BUILD.bazel
+++ b/rs/sns/governance/BUILD.bazel
@@ -82,7 +82,7 @@ DEV_DEPENDENCIES = [
     "//rs/nervous_system/common/test_keys",
     "//rs/nervous_system/common/test_utils",
     "//rs/sns/governance/protobuf_generator:lib",
-    "//rs/sns/test_utils",
+    "//rs/sns/test_utils:ic_sns_test_utils",
     "//rs/test_utilities/compare_dirs",
     "//rs/test_utilities/types",
     "@crate_index//:assert_matches",
