--- a/rs/sns/test_utils/BUILD.bazel
+++ b/rs/sns/test_utils/BUILD.bazel
@@ -65,7 +65,7 @@ MACRO_DEV_DEPENDENCIES = []
 ALIASES = {}
 
 rust_library(
-    name = "test_utils",
+    name = "ic_sns_test_utils",
     testonly = True,
     srcs = glob(["src/**/*.rs"]),
     aliases = ALIASES,
@@ -76,7 +76,7 @@ rust_library(
 )
 
 rust_library(
-    name = "test_utils--test_feature",
+    name = "ic_sns_test_utils--test_feature",
     testonly = True,
     srcs = glob(["src/**/*.rs"]),
     aliases = ALIASES,
@@ -88,10 +88,10 @@ rust_library(
 )
 
 rust_test(
-    name = "test_utils_test",
+    name = "ic_sns_test_utils_test",
     testonly = True,
     aliases = ALIASES,
-    crate = ":test_utils",
+    crate = ":ic_sns_test_utils",
     proc_macro_deps = MACRO_DEPENDENCIES + MACRO_DEV_DEPENDENCIES,
     deps = DEPENDENCIES + DEV_DEPENDENCIES,
 )
